add phieunhap func

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,6 @@ security.basic.enabled=false
 management.security.enabled=false
 
 #https://somee.com/DOKA/DOU/DOMP/DOMSSQL/DOMSSQLDatabaseDefault.aspx?k1k3k5=9N8W9tqYn03CCOw4%2bKd%2fH5poY2fDnqH5lnbWJBv4YYY%3d
+
+firebase.bucket-name=medical-ecom-72c30.appspot.com
+firebase.image-url=https://firebasestorage.googleapis.com/v0/b/${firebase.bucket-name}/o/%s?alt=media
