--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,11 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-		<dependency>
-		    <groupId>mysql</groupId>
-		    <artifactId>mysql-connector-java</artifactId>
-		    <version>8.0.21</version>
-		</dependency>
+<!--		<dependency>-->
+<!--		    <groupId>mysql</groupId>-->
+<!--		    <artifactId>mysql-connector-java</artifactId>-->
+<!--		    <version>8.0.21</version>-->
+<!--		</dependency>-->
 
 		<!--		MAIL-->
 		<dependency>
@@ -77,7 +77,21 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
-
+		<!-- Firebase -->
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>7.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>5.3.5</version>
+		</dependency>
 	</dependencies>
 
 
